--- a/ws_config.json
+++ b/ws_config.json
@@ -5,11 +5,11 @@
     "internal_http_port": 8959,
     "external_http_port": 8959,
     "ccs" : {
-        "firebat": {
+        "flash": {
             "ip": "127.0.0.1",
             "auth": "PROTOSS_IS_FOR_NOOBS"     
         },
-        "goliath": {
+        "boxer": {
             "ip": "127.0.0.2",
             "auth": "I_DRINK_ZERG_TEARS"
         }
