Major code cleanup

--- a/ws_config.json
+++ b/ws_config.json
@@ -1,7 +1,6 @@
 {
     "name": "firebat",
-    "domain": "firebat.stanford.edu",
-    "ip": "127.0.0.1",
+    "url": "firebat.stanford.edu",
     "redis_port": 4738,
     "redis_pass": "test_pass",
     "internal_http_port": 8959,
