Reformat ws config file to python file

--- a/ws.conf
+++ b/ws.conf
@@ -16,7 +16,9 @@ command_centers = {
     }
 }
 
-stats_server: {
+stats_server = {
     'url': 'mongod.stanford.edu',
-
+    'port': 9823,
+    'username': 'username',
+    'password': 'password'
 }
