fixed multithreaded heartbeat checking

--- a/ws.conf
+++ b/ws.conf
@@ -1,9 +1,9 @@
 name = 'firebat'
-url = 'firebat.stanford.edu'
-redis_port = 4738
+url = '127.0.0.1'
+redis_port = 4739
 redis_pass = 'test_pass'
-internal_http_port = 8959
-external_http_port = 8959
+internal_http_port = 8960
+external_http_port = 8960
 
 command_centers = {
     'flash': {
