WS can finally connect to CC outside of unit test

--- a/ws.conf
+++ b/ws.conf
@@ -7,7 +7,7 @@ external_http_port = 8960
 
 command_centers = {
     'flash': {
-        'url': 'flash.stanford.edu',
+        'url': '127.0.0.1:8980',
         'auth': 'PROTOSS_IS_FOR_NOOBS',
     },
     'boxer': {
