--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,9 @@ checkout:
   post:
     - cd redis/src; make -j4;
 
+  cache_directories:
+    - redis
+
 dependencies:
   pre:
     - pip install tornado
@@ -19,10 +22,13 @@ dependencies:
     - wget http://pocoproject.org/releases/poco-1.5.2/poco-1.5.2-all.tar.gz
     - tar xvf poco-1.5.2-all.tar.gz
     - cd poco-1.5.2-all; ./configure --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC; make -j4; make install
-    - cd /home/ubuntu/backend/core/
-    - mkdir build
-    - cd build
-    - cmake ../ -DPOCOINSTALL_DIR=/home/ubuntu/poco152_install
-    - make
+    - cd core; mkdir build; cd build; cmake ../ -DPOCOINSTALL_DIR=/home/ubuntu/poco152_install; make
+
+  cache_directories:
+    - poco-1.5.2-all
+    - ../poco152_install
+
+test:
+  post:
     - /home/ubuntu/backend/core/tests/start_services
-    - make test
+    - cd /home/ubuntu/backend/core/build/; make test
