--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ machine:
 
 checkout:
   post:
-    - cd redis/src; make -j4;
+    - if [[ ! -e redis/src/redis-server ]]; then cd redis/src && make -j4;
 
   cache_directories:
     - redis
@@ -19,10 +19,8 @@ dependencies:
     - pip install redis
     - pip install bcrypt
     - pip install pymongo
-    - wget http://pocoproject.org/releases/poco-1.5.2/poco-1.5.2-all.tar.gz
-    - tar xvf poco-1.5.2-all.tar.gz
-    - cd poco-1.5.2-all; ./configure --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC; make -j4; make install
-    - cd core; mkdir build; cd build; cmake ../ -DPOCOINSTALL_DIR=/home/ubuntu/poco152_install; make
+    - if [[ ! -e poco-1.5.2-all ]]; then wget http://pocoproject.org/releases/poco-1.5.2/poco-1.5.2-all.tar.gz && tar xvf poco-1.5.2-all.tar.gz && cd poco-1.5.2-all && ./configure --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC && make -j4 && make install
+    - cd core && mkdir build && cd build && cmake ../ -DPOCOINSTALL_DIR=/home/ubuntu/poco152_install && make
 
   cache_directories:
     - poco-1.5.2-all
