--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ machine:
 
 checkout:
   post:
-    - if [[ ! -e redis/src/redis-server ]]; then cd redis/src && make -j4; done
+    - if [[ ! -e redis/src/redis-server ]]; then cd redis/src && make -j4; fi
 
   cache_directories:
     - redis
@@ -19,7 +19,7 @@ dependencies:
     - pip install redis
     - pip install bcrypt
     - pip install pymongo
-    - if [[ ! -e poco-1.5.2-all ]]; then wget http://pocoproject.org/releases/poco-1.5.2/poco-1.5.2-all.tar.gz && tar xvf poco-1.5.2-all.tar.gz && cd poco-1.5.2-all && ./configure --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC && make -j4 && make install; done
+    - if [[ ! -e poco-1.5.2-all ]]; then wget http://pocoproject.org/releases/poco-1.5.2/poco-1.5.2-all.tar.gz && tar xvf poco-1.5.2-all.tar.gz && cd poco-1.5.2-all && ./configure --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC && make -j4 && make install; fi
     - cd core && mkdir build && cd build && cmake ../ -DPOCOINSTALL_DIR=/home/ubuntu/poco152_install && make
 
   cache_directories:
