--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Core_BINARY_DIR})
 
 file(GLOB test_progs "test*.cpp")
 file(GLOB poco_libs ${POCO_INSTALL_DIR}/lib/*)
+message(${poco_libs})
 foreach(test_prog ${test_progs})
     get_filename_component(test_root ${test_prog} NAME_WE)
     add_executable(${test_root} ${test_prog} ${CppFiles})
