--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -3,11 +3,15 @@ link_directories(${Core_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Core_BINARY_DIR})
 
 file(GLOB test_progs "test*.cpp")
-file(GLOB poco_libs ${POCO_INSTALL_DIR}/lib/*)
-message(${poco_libs})
+file(GLOB poco_libs ${POCO_INSTALL_DIR}/lib/*.a)
+
+link_directories(${POCO_INSTALL_DIR}/lib)
+
+set(poco_libraries PocoNetSSL PocoCrypto PocoUtil PocoJSON PocoXML PocoNet PocoFoundation)
+
 foreach(test_prog ${test_progs})
     get_filename_component(test_root ${test_prog} NAME_WE)
     add_executable(${test_root} ${test_prog} ${CppFiles})
-    target_link_libraries(${test_root} ${poco_libs} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+    target_link_libraries(${test_root} ${poco_libraries} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})    
     add_test(${test_root} ${Core_BINARY_DIR}/${test_root})
 endforeach(test_prog ${test_progs})
