--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,9 @@ dependencies:
     - cmake --version
     - if [[ ! -e poco-1.5.2-all ]]; then wget http://pocoproject.org/releases/poco-1.5.2/poco-1.5.2-all.tar.gz && tar xvf poco-1.5.2-all.tar.gz; fi
     - cd poco-1.5.2-all && ./configure --no-samples --no-tests --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC && make -j4 && make install;
-    - cd core && mkdir build && cd build && cmake ../ -DPOCO_INSTALL_DIR=/home/ubuntu/poco152_install -DCMAKE_BUILD_TYPE=Release && make
+    - wget http://www.stanford.edu/~yutongz/openmm_install.tar.gz
+    - mkdir ../openmm_install; cd ../openmm_install; tar xvf ../backend/openmm_install.tar.gz
+    - cd core && mkdir build && cd build && cmake ../ -DPOCO_INSTALL_DIR=/home/ubuntu/poco152_install -DOPENMM_INSTALL_DIR=/home/ubuntu/openmm_install -DCMAKE_BUILD_TYPE=Release && make
 
   cache_directories:
     - "poco-1.5.2-all"
