Make engine type and version customizable

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -1,12 +1,13 @@
 link_directories(${Core_BINARY_DIR})
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Core_BINARY_DIR})
+set(CORE_VERSION 1)
 
 file(GLOB test_progs "test*.cpp")
 file(GLOB poco_libs ${POCO_INSTALL_DIR}/lib/*.a)
 
 link_directories(${POCO_INSTALL_DIR}/lib)
-
+add_definitions(-DCORE_VERSION=${CORE_VERSION})
 set(poco_libraries PocoNetSSL PocoCrypto PocoUtil PocoJSON PocoXML PocoNet PocoFoundation)
 
 foreach(test_prog ${test_progs})
