--- a/circle.yml
+++ b/circle.yml
@@ -32,9 +32,5 @@ dependencies:
 
 test:
   post:
-    - cd core/build; make
     - cd core/build; ../tests/start_services
-    - cd core/build; ./tests/test_core
-    - cd core/build; ../tests/stop_services; ../tests/start_services;
-    - cd core/build; ./tests/test_openmm_core
-    - cd core/build; ../tests/stop_services
+    - cd core/build; make test
