Standalone cores can be built

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required (VERSION 2.6)
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Valid Options: Debug, Release, RelWithDebIfno" FORCE)
+endif()
+
 file(GLOB CoreSources "src/*.cpp")
 file(GLOB OpenMMCoreSources "src/openmm/*.cpp")
+set(OpenMMCoreSources ${OpenMMCoreSources} ${CoreSources})
 file(GLOB TeraChemCoreSource "src/terachem/*.cpp")
 
 set(POCO_INSTALL_DIR "~/poco152_install" CACHE FILEPATH "Poco 1.5.2 install folder")
@@ -18,10 +23,15 @@ include_directories("${OPENMM_INSTALL_DIR}/include")
 set(CORE_VERSION 1)
 add_definitions(-DCORE_VERSION=${CORE_VERSION})
 
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Valid Options: Debug, Release, RelWithDebIfno" FORCE)
-endif()
+link_directories(${POCO_INSTALL_DIR}/lib)
+set(poco_libraries PocoNetSSL PocoCrypto PocoUtil PocoJSON PocoXML PocoNet PocoFoundation)
+link_directories(${OPENMM_INSTALL_DIR}/lib)
+link_directories(${OPENMM_INSTALL_DIR}/lib/plugins)
+set(openmm_libraries OpenMMCPU_static OpenMM_static)
 
 enable_testing()
-
 add_subdirectory(tests)
+
+add_definitions(-DOPENMM_CPU)
+add_executable(ocore src/binary/ocore.cpp ${OpenMMCoreSources})
+target_link_libraries(ocore ${poco_libraries} ${openmm_libraries} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
