Fix yml and made sure to register PME plugin AFTER the CPU platform has been registered

--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ dependencies:
     - cd poco-1.5.2-all && ./configure --no-samples --no-tests --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC && make -j4 && make install;
     - wget http://www.stanford.edu/~yutongz/openmm_install.tar.gz
     - mkdir ../openmm_install; cd ../openmm_install; tar xvf ../backend/openmm_install.tar.gz
-    - cd core && mkdir build && cd build && cmake ../ -DPOCO_INSTALL_DIR=/home/ubuntu/poco152_install -DOPENMM_INSTALL_DIR=/home/ubuntu/openmm_install -DCMAKE_BUILD_TYPE=Release && make
+    - cd core && mkdir build && cd build && cmake ../ -DFFTW_INSTALL_DIR="" -DPOCO_INSTALL_DIR=/home/ubuntu/poco152_install -DOPENMM_INSTALL_DIR=/home/ubuntu/openmm_install -DCMAKE_BUILD_TYPE=Release && make
 
   cache_directories:
     - "poco-1.5.2-all"
