--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -31,15 +31,15 @@ link_directories(${OPENMM_INSTALL_DIR}/lib)
 link_directories(${OPENMM_INSTALL_DIR}/lib/plugins)
 set(openmm_libraries OpenMMCPU_static OpenMM_static)
 
+enable_testing()
+add_subdirectory(tests)
+
 if(FFTW_INSTALL_DIR)
     set(openmm_pme_plugin OpenMMPME_static)
     link_directories(${FFTW_INSTALL_DIR}/lib)
     set(fftw_libraries fftw3f fftw3f_threads)
-    add_definitions(-DUSE_FFTW)
+    add_definitions(-DUSE_PME_PLUGIN)
 endif(FFTW_INSTALL_DIR)
-
-enable_testing()
-add_subdirectory(tests)
 
 add_definitions(-DOPENMM_CPU)
 add_executable(ocore src/binary/ocore.cpp ${OpenMMCoreSources})
