SSL options no longer hardcoded in. Added InCommon CA chain

--- a/cc.conf
+++ b/cc.conf
@@ -4,6 +4,10 @@ redis_port = 4740
 redis_pass = 'test_pass'
 internal_http_port = 8980
 external_http_port = 8980
+ssl_certfile = 'certs/public.crt'
+ssl_key = 'certs/private.pem'
+ssl_ca_certs = 'certs/incommon_ca.pem'
+
 cc_pass = 'PROTOSS_IS_FOR_NOOBS'
 
 stats_server = {
