--- a/ws.conf
+++ b/ws.conf
@@ -4,6 +4,9 @@ redis_port = 4739
 redis_pass = 'test_pass'
 internal_http_port = 8960
 external_http_port = 8960
+ssl_certfile = 'certs/public.crt'
+ssl_key = 'certs/private.pem'
+ssl_ca_certs = 'certs/incommon_ca.pem'
 
 command_centers = {
     'flash': {
