Massive amounts of refactoring to keep options sane

--- a/cc.conf
+++ b/cc.conf
@@ -1,15 +1,18 @@
 name = 'flash'
-redis_port = 4740
-redis_pass = 'test_pass'
 internal_http_port = 8980
 ssl_certfile = 'certs/public.crt'
 ssl_key = 'certs/private.pem'
 ssl_ca_certs = 'certs/incommon_ca.pem'
-
 cc_pass = 'PROTOSS_IS_FOR_NOOBS'
-stats_server = {
-    'url': 'mongod.stanford.edu',
-    'port': 9823,
-    'username': 'username',
-    'password': 'password'
+
+redis_options = {
+    'port': 4776,
+    'appendfilename': 'aof_',
+    'requirepass': 'somerandompass',
+    'logfile': 'db_log_',
+}
+
+mongo_options = {
+    'host': 'localhost',
+    'port': 27017
 }
