--- a/ws.conf
+++ b/ws.conf
@@ -1,23 +1,29 @@
 name = 'firebat'
-url = '127.0.0.1'
-redis_port = 4739
-redis_pass = 'test_pass'
 internal_http_port = 8960
-external_http_port = 8960
 ssl_certfile = 'certs/public.crt'
 ssl_key = 'certs/private.pem'
 ssl_ca_certs = 'certs/incommon_ca.pem'
 
+external_options = {
+    'external_url': '127.0.0.1',
+    'external_http_port': '8960'
+}
+
+redis_options = {
+    'port': 4740,
+    'appendfilename': 'aof_',
+    'requirepass': 'secret_ninja_pass',
+    'logfile': 'db_log_',
+}
+
+mongo_options = {
+    'host': 'localhost',
+    'port': 27017
+}
+
 command_centers = {
     'flash': {
         'url': '127.0.0.1:8980',
-        'auth': 'PROTOSS_IS_FOR_NOOBS',
+        'pass': 'PROTOSS_IS_FOR_NOOBS',
     },
-}
-
-stats_server = {
-    'url': 'mongod.stanford.edu',
-    'port': 9823,
-    'username': 'username',
-    'password': 'password'
 }
