--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,9 @@ dependencies:
     - cd poco-1.5.2-all && ./configure --no-samples --no-tests --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC && make -j4 && make install;
     - wget http://www.stanford.edu/~yutongz/openmm_install.tar.gz
     - mkdir ../openmm_install; cd ../openmm_install; tar xvf ../backend/openmm_install.tar.gz
-    - cd core && mkdir build && cd build && cmake ../ -DFFTW_INSTALL_DIR="" -DPOCO_INSTALL_DIR=/home/ubuntu/poco152_install -DOPENMM_INSTALL_DIR=/home/ubuntu/openmm_install -DCMAKE_BUILD_TYPE=Release && make
+    - wget http://www.stanford.edu/~yutongz/fftw_install.tar.gz
+    - mkdir ../fftw_install; cd ../fftw_install; tar xvf ../backend/fftw_install.tar.gz
+    - cd core && mkdir build && cd build && cmake ../ -DFFTW_INSTALL_DIR="/home/ubuntu/fftw_install" -DPOCO_INSTALL_DIR=/home/ubuntu/poco152_install -DOPENMM_INSTALL_DIR=/home/ubuntu/openmm_install -DCMAKE_BUILD_TYPE=Release && make
 
   cache_directories:
     - "poco-1.5.2-all"
