--- a/core/benchmark/CMakeLists.txt
+++ b/core/benchmark/CMakeLists.txt
@@ -1,6 +1,10 @@
 include(ExternalProject)
 
-set(OPENCL_ROOT /usr/local/cuda CACHE PATH "OpenCL Directory")
+if(APPLE)
+    find_library(OPENCL_LIBRARY OpenCL)
+elseif(UNIX)
+    set(OPENCL_ROOT /usr/local/cuda CACHE PATH "OpenCL Directory")
+endif()
 
 ExternalProject_Add(clfft
     SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/clfft/src
@@ -17,5 +21,5 @@ include_directories(${OPENCL_ROOT}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/clfft/src/include)
 include_directories(${install_dir}/include)
 include_directories(${FFTW_INSTALL_DIR}/include)
-add_library(Benchmark STATIC ${BenchmarkSources} clfft)
+add_library(Benchmark STATIC ${BenchmarkSources})
 add_dependencies(Benchmark clfft)
