Added FindFFTW Cmake file

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,4 +1,8 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 2.8)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
+
+find_package(FFTW REQUIRED)
 
 set(BUILD_BENCHMARK TRUE CACHE BOOL "Whether or not to build the benchmark")
 
