--- a/core/benchmark/CMakeLists.txt
+++ b/core/benchmark/CMakeLists.txt
@@ -15,11 +15,10 @@ ExternalProject_Add(clfft
 )
 
 file(GLOB BenchmarkSources *.cpp)
-set(FFTW_INSTALL_DIR "~/fftw_install" CACHE PATH "FFTW install folder")
 ExternalProject_Get_Property(clfft install_dir)
 include_directories(${OPENCL_ROOT}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/clfft/src/include)
 include_directories(${install_dir}/include)
-include_directories(${FFTW_INSTALL_DIR}/include)
+include_directories(${FFTW_INCLUDE_DIRS})
 add_library(Benchmark STATIC ${BenchmarkSources})
 add_dependencies(Benchmark clfft)
