--- a/core/benchmark/clfft/src/CMakeLists.txt
+++ b/core/benchmark/clfft/src/CMakeLists.txt
@@ -67,9 +67,9 @@ endif()
 
 # Options that the user or driver program can set to control various components of the build
 option( BUILD_RUNTIME "Build the FFT runtime library" ON )
-option( BUILD_CLIENT "Build a command line clFFT client program with a variety of configurable parameters (dependency on Boost)" ON )
-option( BUILD_TEST "Build the library testing suite (dependency on google test, Boost, and FFTW)" ON )
-option( BUILD_LOADLIBRARIES "Build the optional dynamic load libraries that the FFT runtime will search for" ON )
+option( BUILD_CLIENT "Build a command line clFFT client program with a variety of configurable parameters (dependency on Boost)" OFF )
+option( BUILD_TEST "Build the library testing suite (dependency on google test, Boost, and FFTW)" OFF )
+option( BUILD_LOADLIBRARIES "Build the optional dynamic load libraries that the FFT runtime will search for" OFF )
 
 # If BOOST_ROOT is defined as an environment value, use that value and cache it so it's visible in the cmake-gui.  
 # Otherwise, create a sensible default that the user can change
@@ -80,7 +80,7 @@ endif( )
 # Currently, linux has a problem outputing both narrow and wide characters,
 # which happens in our client because openCL only supports narrow characters
 if( WIN32 )
-	option( UNICODE "Build with Unicode Support" ON )
+	option( UNICODE "Build with Unicode Support" OFF )
 	if( UNICODE )
 		message( STATUS "UNICODE build" )
 	endif( )
