Almost everything builds now except some tests

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required (VERSION 2.8)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 
 find_package(FFTW REQUIRED)
+find_package(POCO REQUIRED)
+
+include_directories(${POCO_INCLUDE_DIRS})
 
 set(BUILD_BENCHMARK TRUE CACHE BOOL "Whether or not to build the benchmark")
 
@@ -10,6 +13,9 @@ if(BUILD_BENCHMARK)
     add_subdirectory(benchmark)
 endif()
 
+include_directories(base)
 set(CORE_ROOT_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
+add_subdirectory(base)
+add_subdirectory(openmm_core)
 add_subdirectory(tests)
