--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required (VERSION 2.8)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
+# contains the find_package(OpenCL)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/benchmark/clfft/src)
 
-find_package(FFTW REQUIRED)
+find_package(OpenCL REQUIRED)
 find_package(POCO REQUIRED)
+find_package(OpenSSL REQUIRED)
+find_package(FFTW REQUIRED)
+find_package(Threads REQUIRED)
 
 include_directories(${POCO_INCLUDE_DIRS})
 
@@ -15,6 +20,8 @@ endif()
 
 include_directories(base)
 set(CORE_ROOT_DIR ${CMAKE_CURRENT_BINARY_DIR})
+
+enable_testing()
 
 add_subdirectory(base)
 add_subdirectory(openmm_core)
