--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -1,14 +1,20 @@
+# test_benchmark.cpp
 if(BUILD_BENCHMARK)
     add_executable(test_benchmark test_benchmark.cpp)
+    include_directories(${OPENCL_INCLUDE_DIRS})
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../benchmark)
     include_directories(${CORE_ROOT_DIR}/clfft_install/include)
     include_directories(${FFTW_INCLUDE_DIRS})
-    if(APPLE)
+    if(UNIX)
         set(CLFFT_LIB_PATH ${CORE_ROOT_DIR}/clfft_install/lib64/import/libclFFT.a)
     endif()
     link_directories(${FFTW_INSTALL_DIR}/lib)
-    target_link_libraries(test_benchmark ${CLFFT_LIB_PATH} ${OPENCL_LIBRARY} ${FFTW_LIBRARIES} Benchmark)
+    target_link_libraries(test_benchmark Benchmark ${OPENCL_LIBRARIES} ${CLFFT_LIB_PATH} ${OPENCL_LIBRARIES} ${FFTW_LIBRARIES})
 endif()
+
+add_executable(test_core test_core.cpp)
+target_link_libraries(test_core Core ${OPENSSL_LIBRARIES} ${POCO_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+add_test(test_core test_core)
 
 # link_directories(${Core_BINARY_DIR})
 # 
@@ -28,6 +34,10 @@ endif()
 #     add_test(${test_root} ${Core_BINARY_DIR}/${test_root})
 # endforeach()
 #
+
+add_executable(test_openmm_core test_openmm_core.cpp)
+target_link_libraries(test_openmm_core ${OPENMM_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+
 # set(test_openmm_progs "test_openmm_core.cpp")
 # foreach(test_prog ${test_openmm_progs})
 #    get_filename_component(test_root ${test_prog} NAME_WE)
