More CMake updates

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required (VERSION 2.8)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
-# contains the find_package(OpenCL)
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/benchmark/clfft/src)
+set(OPENCL_ROOT /usr/local/cuda CACHE PATH "OpenCL Directory")
 
 find_package(OpenCL REQUIRED)
 find_package(POCO REQUIRED)
