--- a/core/benchmark/CMakeLists.txt
+++ b/core/benchmark/CMakeLists.txt
@@ -6,7 +6,7 @@ elseif(UNIX)
     set(OPENCL_ROOT /usr/local/cuda CACHE PATH "OpenCL Directory")
 endif()
 
-message('BUILDING EXTERNAL')
+message(STATUS 'BUILDING CLFFT')
 
 ExternalProject_Add(clfft
     SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/clfft/src
