--- a/core/openmm_core/tests/CMakeLists.txt
+++ b/core/openmm_core/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(${OPENMM_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
 add_executable(test_openmm_core test_openmm_core.cpp)
-
+add_test(test_openmm_core test_openmm_core)
 target_link_libraries(test_openmm_core OpenMMCore Core ${OPENMM_CORE_DEPENDENCIES})
