--- a/core/openmm_core/CMakeLists.txt
+++ b/core/openmm_core/CMakeLists.txt
@@ -4,6 +4,7 @@ endif()
 
 find_package(OpenMM REQUIRED)
 include_directories(${OPENMM_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../benchmark)
 
 file(GLOB OpenMMCoreSources "*.cpp")
 list(REMOVE_ITEM OpenMMCoreSources main.cpp)
@@ -15,13 +16,29 @@ add_definitions(-DCORE_VERSION=${CORE_VERSION})
 
 enable_testing()
 
+set(CORE_NAME ocore_${CORE_TYPE})
+add_executable(${CORE_NAME} main.cpp)
+
 if(CORE_TYPE STREQUAL "CPU")
     set(ADDITIONAL_LIBRARIES ${FFTW_LIBRARIES})
     add_definitions(-DUSE_PME_PLUGIN)
     add_definitions(-DOPENMM_CPU)
+    if(BUILD_BENCHMARK)
+        add_dependencies(${CORE_NAME} Benchmark)
+        add_definitions(-DUSE_BENCHMARK)
+        include_directories(${FFTW_INCLUDE_DIRS}) 
+        set(ADDITIONAL_LIBRARIES Benchmark ${ADDITIONAL_LIBRARIES})
+    endif()
 elseif(CORE_TYPE STREQUAL "OpenCL")
     set(ADDITIONAL_LIBRARIES ${OPENCL_LIBRARIES})
     add_definitions(-DOPENMM_OPENCL)
+    if(BUILD_BENCHMARK)
+        add_dependencies(${CORE_NAME} Benchmark)
+        add_definitions(-DUSE_BENCHMARK)
+        include_directories(${CMAKE_CURRENT_BINARY_DIR}/../clfft_install/include)
+        include_directories(${OPENCL_INCLUDE_DIRS})
+        set(ADDITIONAL_LIBRARIES Benchmark ${CMAKE_CURRENT_BINARY_DIR}/../clfft_install/lib64/import/libclFFT.a ${ADDITIONAL_LIBRARIES})
+    endif()
 elseif(CORE_TYPE STREQUAL "CUDA")
     set(CUDA_DRIVER_PATH "/usr/lib/nvidia-current/" CACHE STRING "Driver Location")
     set(CUFFT_PATH "/usr/local/cuda/lib64" CACHE STRING "CUFFT Location")
@@ -37,7 +54,6 @@ set(OPENMM_CORE_DEPENDENCIES ${CMAKE_THREAD_LIBS_INIT} ${POCO_LIBRARIES} ${OPENS
 mark_as_advanced(OPENMM_CORE_DEPENDENCIES)
 
 add_library(OpenMMCore STATIC ${OpenMMCoreSources})
-set(CORE_NAME ocore_${CORE_TYPE})
-add_executable(${CORE_NAME} main.cpp)
+
 target_link_libraries(${CORE_NAME} OpenMMCore Core ${OPENMM_CORE_DEPENDENCIES})
 add_subdirectory(tests)
